2012-10-02  Anders Carlsson  <andersca@apple.com>

        Fix build.

        * WebProcess/Geolocation/WebGeolocationManager.cpp:
        (WebKit::WebGeolocationManager::WebGeolocationManager):

2012-10-02  Anders Carlsson  <andersca@apple.com>

        Fix infinite recursion inside WebProcess constructor
        https://bugs.webkit.org/show_bug.cgi?id=98206

        Reviewed by Brian Weinstein.

        Don't call WebProcess::shared from the WebGeolocationManager constructor since it is invoked from the WebProcess constructor.

        * WebProcess/Geolocation/WebGeolocationManager.cpp:
        (WebKit::WebGeolocationManager::WebGeolocationManager):

2012-10-02  Hugo Parente Lima  <hugo.lima@openbossa.org>

        [WK2] Move some tiled backing store/viewport functions from Qt to generic WebKit2 sources
        https://bugs.webkit.org/show_bug.cgi?id=98199

        Reviewed by Noam Rosenthal.

        Move commitPageTransitionViewport from Qt to WebKit2.

        * UIProcess/WebPageProxy.cpp:
        (WebKit):
        (WebKit::WebPageProxy::commitPageTransitionViewport):
        * UIProcess/qt/WebPageProxyQt.cpp:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit):
        (WebKit::WebPage::commitPageTransitionViewport):
        * WebProcess/WebPage/WebPage.h:
        (WebPage):
        * WebProcess/WebPage/WebPage.messages.in:
        * WebProcess/WebPage/qt/WebPageQt.cpp:

2012-10-02  Anders Carlsson  <andersca@apple.com>

        Build fixes.

        * PluginProcess/mac/PluginProcessMac.mm:
        (WebKit::beginModal):
        * UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
        (WebKit::PluginProcessProxy::getPluginProcessSerialNumber):
        (WebKit::PluginProcessProxy::makePluginProcessTheFrontProcess):
        (WebKit::PluginProcessProxy::makeUIProcessTheFrontProcess):
        (WebKit::PluginProcessProxy::exitFullscreen):

2012-10-02  Alexey Proskuryakov  <ap@apple.com>
